<resources>
    <string name="app_name">ExchangeTest</string>
    <string name="exchange_compute">환율 계산</string>
    <string name="remittance_country">송금국가 :</string>
    <string name="receive_country">수취국가 :</string>
    <string name="exchange_rate">환율 :</string>
    <string name="search_time">조회시간 :</string>
    <string name="remittance_amount">송금액 :</string>
    <string name="usd">USD</string>
    <string name="usa">미국(USD)</string>
    <string name="korea">한국(KRW)</string>
    <string name="japan">일본(JPY)</string>
    <string name="philippines">필리핀(PHP)</string>
    <string name="usa_eng">usa</string>
    <string name="korea_eng">korea</string>
    <string name="japan_eng">japan</string>
    <string name="philippines_eng">philippines</string>
    <string name="error_message">송금액이 바르지 않습니다</string>
    <string name="edit_hint">0 ~ 10,000</string>
</resources>